# pragyan

./: .gitignore
pragyan-engine/: config.py  main.py  pyproject.toml
pragyan-engine/common/: caching.py  connections.py  logging.py  logging_config.conf
pragyan-engine/common/errors/: auth.py  db.py
pragyan-engine/core/: auth.py
pragyan-engine/core/data/: service.py
pragyan-engine/core/db/: connections.py  utils.py
pragyan-engine/dependencies/: auth.py  db.py
pragyan-engine/entities/: auth.py  connections.py  data.py
pragyan-engine/models/: auth.py  connections.py  mixins.py
pragyan-engine/routers/: auth.py  connections.py  data.py
pragyan-engine/security/: encryption.py
pragyan-engine/serializers/: auth.py
ui/: package-lock.json  package.json  tsconfig.node.json
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Menu.tsx
ui/src/components/chart/: ReactEcharts.tsx
ui/src/components/ui/: menubar.tsx
ui/src/dataWorkspace/: DataWorkspace.tsx
ui/src/home/: ConnSidebar.tsx  Home.tsx  Navbar.tsx
ui/src/shared/interfaces/: sourceData.ts  tabs.ts
ui/src/store/: index.ts  useSourceDataStore.ts  useTabsDataStore.ts
ui/src/workspace/: ChartWorkspace.tsx  ChartWorkspaceDataSidebar.tsx  Sheetbar.tsx  SheetbarTab.tsx  Workspace.tsx
